Fix title overflow in EPUB catalog

--- a/resources/catalog/stylesheet.css
+++ b/resources/catalog/stylesheet.css
@@ -4,7 +4,7 @@ p.title  {
 	text-align:center;
 	font-style:italic;
 	font-size:xx-large;
-	height:0px;
+    border-bottom: solid black 4px;
 	}
 	
 p.author {
